# r2d2-nxt

./: CMakeLists.txt  Doxyfile.in  README.md  annotated.html  bluetooth_8hpp_source.html  classBTTransport-members.html  classBTTransport.html  classConnectionHandler-members.html  classDiscoverer-members.html  classTrafficHandler-members.html  classes.html  classr2d2_1_1ActiveLightSensor-members.html  classr2d2_1_1ActiveLightSensor.html  classr2d2_1_1ActiveLightSensor__inherit__graph.map  classr2d2_1_1ActiveLightSensor__inherit__graph.md5  classr2d2_1_1AnalogSensor-members.html  classr2d2_1_1AnalogSensor.html  classr2d2_1_1AnalogSensor__coll__graph.map  classr2d2_1_1AnalogSensor__coll__graph.md5  classr2d2_1_1AnalogSensor__inherit__graph.map  classr2d2_1_1AnalogSensor__inherit__graph.md5  classr2d2_1_1BTBrickManager-members.html  classr2d2_1_1BTBrickManager.html  classr2d2_1_1BTBrickManager__coll__graph.md5  classr2d2_1_1BTBrickManager__inherit__graph.map  classr2d2_1_1BTTransport-members.html  classr2d2_1_1BTTransport.html  classr2d2_1_1BTTransport__coll__graph.map  classr2d2_1_1BTTransport__coll__graph.md5  classr2d2_1_1Brick-members.html  classr2d2_1_1Brick.html  classr2d2_1_1BrickManager-members.html  classr2d2_1_1BrickManager.html  classr2d2_1_1BrickManager__inherit__graph.map  classr2d2_1_1BrickManager__inherit__graph.md5  classr2d2_1_1Comm-members.html  classr2d2_1_1Comm.html  classr2d2_1_1DigitalSensor-members.html  classr2d2_1_1DigitalSensor.html  classr2d2_1_1DigitalSensor__coll__graph.map  (+99 more)
cmake-cxx11/Modules/CheckCXX11Features/: cxx11-test-enum_class.cpp
cmake/Modules/: CheckCXX11Features.cmake  FindBluez.cmake  FindLibUsb1.cmake
cmake/Modules/CheckCXX11Features/: cxx11-test-__func__.cpp  cxx11-test-auto.cpp  cxx11-test-auto_fail_compile.cpp  cxx11-test-auto_ret_type.cpp  cxx11-test-class_override_final.cpp  cxx11-test-class_override_final_fail_compile.cpp  cxx11-test-constexpr.cpp  cxx11-test-cstdint.cpp  cxx11-test-enum_class.cpp  cxx11-test-initializer_list.cpp  cxx11-test-mutex.cpp  cxx11-test-nullptr.cpp  cxx11-test-nullptr_fail_compile.cpp  cxx11-test-regex.cpp  cxx11-test-rvalue-references.cpp  cxx11-test-sizeof_member.cpp  cxx11-test-sizeof_member_fail.cpp  cxx11-test-static_assert.cpp  cxx11-test-static_assert_fail_compile.cpp  cxx11-test-variadic_templates.cpp
cmake/modules/: bluetooth-config.cmake  libusb-config.cmake
examples/: CMakeLists.txt  avoid_obstacles_bt.cpp  mary.cpp  mary_bt.cpp  test.cpp  test_bt.cpp
include/: r2d2.hpp
include/r2d2/: bluetooth.hpp  comm.hpp  linux_bluetooth.hpp  linux_bluetooth_bridge.h  motors.hpp  osx_bluetooth.hpp  osx_bluetooth_bridge.h  r2d2_base.hpp  sensors.hpp  usb.hpp
search/: all_61.js  all_62.js  all_63.js  all_6c.js  all_6d.js  all_70.js  all_72.js  all_73.js  classes_62.js  classes_63.js  classes_64.js  classes_6c.js  classes_6d.js  classes_6e.js  classes_70.js  classes_73.js  classes_74.js  classes_75.js  functions_63.js  functions_67.js  functions_68.js  functions_69.js  functions_6c.js  functions_6d.js  functions_6f.js  functions_70.js  functions_73.js  search.js
src/: CMakeLists.txt  bluetooth.cpp  bluetooth_bridge.c  comm.cpp  inquiry.m  linux_bluetooth.cpp  linux_bluetooth_bridge.c  macosx_bluetooth_bridge.m  motors.cpp  osx_bluetooth.cpp  osx_bluetooth_bridge.m  r2d2.cpp  rfcomm-client.m  sensors.cpp  usb.cpp
